# bazel-eclipse

./: .base-bazelrc  .bazelrc  .company-bazelrc  .gitignore  .project  .user-bazelrc  .user-bazelrc-cache  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  WORKSPACE  eclipse_sdk.sh  index.html  javaConfig.json  pom.xml  sdk-copybara-reverse.sh  sdk-copybara.sh
.github/: bef-create-update-site-rc.sh  bef-create-update-site.sh  bef-update-site-index.html  bjls-create-update-site-rc.sh  bjls-create-update-site.sh  bjls-update-site-index.html  create-update-site-rc.sh  create-update-site.sh  dependabot.yml
bazel-java-sdk/: .project  BUILD  README.md
bundles/testdata/workspaces/002/: .bazelproject  .gitignore  MODULE.bazel  WORKSPACE  maven_install.json
bundles/testdata/workspaces/002/module1/: BUILD
bundles/testdata/workspaces/002/module1/java/src/log/: Logger.java
bundles/testdata/workspaces/002/module2/: .bazeltargets  BUILD
bundles/testdata/workspaces/002/module3/: .bazeltargets
bundles/testdata/workspaces/002/tools/ide/: my_macro_analyzer.scl
bundles/testdata/workspaces/002/tools/macro/: .bazeltargets  defs.bzl
bzl-java-sdk/: BUILD
docs/: README.md  conforming_java_packages.md  history.md  install.md  issues.md  macos.md  releases.md  using_the_feature.md  using_the_feature_builds.md  using_the_feature_classpath.md  using_the_feature_import.md  using_the_feature_launching.md  using_the_feature_preferences.md  using_the_feature_settings.md  windows.md
feature/: .project  BUILD  README.md  category.xml  feature.xml
latest/: p2.index  (+2 more)
(+2015 files in other folders)
